// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegates Configurations Page check filter panel 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--background-grey100"
  >
    <div
      class="Layout--horizontal StyledProps--main header StyledProps--background-white"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange600 StyledProps--font-size-normal"
      >
        delegates.delegateProfilesDepricated
      </p>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
          data-name=""
          style="width: 250px; max-width: 250px;"
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 38px;"
            type="search"
            value=""
          />
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main DropDown--disabled"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                data-testid="filter-select"
                style="min-width: 220px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                    common.filters.noFilterSaved
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="filterButtonContainer"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ngFilter StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            id="ngfilterbtn"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ng-filter"
            >
              <svg
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        />
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
      style="width: calc(100vw - 270px); overflow: hidden; min-height: calc(100vh - 205px);"
    >
      <div
        class="StyledProps--font StyledProps--main PageBody--pageBody"
        data-name="page-body"
      >
        <div
          class="delegateProfilesContainer"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateProfileElements Card--interactive"
            tabindex="0"
          >
            <div
              style="width: 250px; height: 200px; border-radius: 5px; display: flex; flex-direction: column;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <h2
                  class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-bottom-medium"
                  level="2"
                  style="font-size: 16px; font-weight: 500; color: rgb(34, 34, 42);"
                >
                  Primary
                </h2>
                <span
                  style="flex-grow: 1;"
                />
                <div
                  class="StyledProps--font StyledProps--main"
                  style="transform: translate(12px, -10px);"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target bp3-popover-open"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon bp3-active"
                        style="transform: rotate(90deg);"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-more StyledProps--main"
                          icon="more"
                        >
                          <svg
                            data-icon="more"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              more
                            </desc>
                            <path
                              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  The primary profile for the account
                </p>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex"
                style="border-top: 1px solid #D9DAE6;"
              >
                <span
                  style="flex-grow: 1;"
                />
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: space-between;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small"
                  style="font-size: 8px; color: rgb(107, 109, 133); letter-spacing: 0.285714px; font-weight: 500;"
                >
                  <div>
                    delegates.usedBy
                  </div>
                  <div>
                     
                    delegate.delegates
                  </div>
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small"
                  style="font-size: 8px; color: rgb(107, 109, 133); letter-spacing: 0.285714px; font-weight: 500;"
                >
                  <div>
                    delegates.lastUpdated
                  </div>
                  <div>
                    0
                     
                    minutes
                     ago
                  </div>
                </p>
              </div>
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateProfileElements Card--interactive"
            tabindex="0"
          >
            <div
              style="width: 250px; height: 200px; border-radius: 5px; display: flex; flex-direction: column;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <h2
                  class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-bottom-medium"
                  level="2"
                  style="font-size: 16px; font-weight: 500; color: rgb(34, 34, 42);"
                >
                  profile 2
                </h2>
                <span
                  style="flex-grow: 1;"
                />
                <div
                  class="StyledProps--font StyledProps--main"
                  style="transform: translate(12px, -10px);"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                        style="transform: rotate(90deg);"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-more StyledProps--main"
                          icon="more"
                        >
                          <svg
                            data-icon="more"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              more
                            </desc>
                            <path
                              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  The profile for the account
                </p>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex"
                style="border-top: 1px solid #D9DAE6;"
              >
                <span
                  style="flex-grow: 1;"
                />
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: space-between;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small"
                  style="font-size: 8px; color: rgb(107, 109, 133); letter-spacing: 0.285714px; font-weight: 500;"
                >
                  <div>
                    delegates.usedBy
                  </div>
                  <div>
                     
                    delegate.delegates
                  </div>
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small"
                  style="font-size: 8px; color: rgb(107, 109, 133); letter-spacing: 0.285714px; font-weight: 500;"
                >
                  <div>
                    delegates.lastUpdated
                  </div>
                  <div>
                    0
                     
                    minutes
                     ago
                  </div>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Configurations Page render data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--background-grey100"
  >
    <div
      class="Layout--horizontal StyledProps--main header StyledProps--background-white"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange600 StyledProps--font-size-normal"
      >
        delegates.delegateProfilesDepricated
      </p>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
          data-name=""
          style="width: 250px; max-width: 250px;"
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 38px;"
            type="search"
            value=""
          />
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main DropDown--disabled"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                data-testid="filter-select"
                style="min-width: 220px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                    common.filters.noFilterSaved
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="filterButtonContainer"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ngFilter StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            id="ngfilterbtn"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ng-filter"
            >
              <svg
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        />
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
      style="width: calc(100vw - 270px); overflow: hidden; min-height: calc(100vh - 205px);"
    >
      <div
        class="StyledProps--font StyledProps--main PageBody--pageBody"
        data-name="page-body"
      >
        <div
          class="delegateProfilesContainer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Configurations Page render data and add new 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--background-grey100"
  >
    <div
      class="Layout--horizontal StyledProps--main header StyledProps--background-white"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange600 StyledProps--font-size-normal"
      >
        delegates.delegateProfilesDepricated
      </p>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
          data-name=""
          style="width: 250px; max-width: 250px;"
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 38px;"
            type="search"
            value=""
          />
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main DropDown--disabled"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                data-testid="filter-select"
                style="min-width: 220px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                    common.filters.noFilterSaved
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="filterButtonContainer"
        >
          <button
            class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main ngFilter StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            disabled=""
            id="ngfilterbtn"
            tabindex="-1"
            type="button"
          >
            <div
              class="bp3-spinner bp3-button-spinner"
            >
              <div
                class="bp3-spinner-animation"
              >
                <svg
                  height="20"
                  stroke-width="16.00"
                  viewBox="-3.00 -3.00 106.00 106.00"
                  width="20"
                >
                  <path
                    class="bp3-spinner-track"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  />
                  <path
                    class="bp3-spinner-head"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    pathLength="280"
                    stroke-dasharray="280 280"
                    stroke-dashoffset="210"
                  />
                </svg>
              </div>
            </div>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ng-filter"
            >
              <svg
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        />
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
      style="width: calc(100vw - 270px); overflow: hidden; min-height: calc(100vh - 205px);"
    >
      <div
        class="StyledProps--font StyledProps--main PageBody--pageBody"
        data-name="page-body"
      >
        <div
          class="delegateProfilesContainer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Configurations Page test name search configs debounce 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--background-grey100"
  >
    <div
      class="Layout--horizontal StyledProps--main header StyledProps--background-white"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange600 StyledProps--font-size-normal"
      >
        delegates.delegateProfilesDepricated
      </p>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search  ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
          data-name=""
          style="width: 250px; max-width: 250px;"
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 38px;"
            type="search"
            value="primary"
          />
          <span
            class="ExpandingSearchInput--btnWrapper"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-close"
              >
                <svg
                  height="8"
                  viewBox="0 0 14 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.6 7l5-5c.3-.2.4-.5.4-.8 0-.7-.5-1.2-1.2-1.2-.3 0-.6.1-.8.3l-5 5-5-5C1.8.1 1.5 0 1.2 0 .5 0 0 .5 0 1.2c0 .3.1.6.3.8l5 5-5 5c-.2.2-.3.5-.3.8 0 .7.5 1.2 1.2 1.2.3 0 .6-.1.8-.3l5-5 5 5c.2.2.5.4.8.4.6 0 1.2-.5 1.2-1.2 0-.3-.1-.6-.3-.8z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main DropDown--disabled"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
                data-testid="filter-select"
                style="min-width: 220px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                    common.filters.noFilterSaved
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="filterButtonContainer"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ngFilter StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            id="ngfilterbtn"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="ng-filter"
            >
              <svg
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 8V7H19a.5.5 0 000-1h-2.5V5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0zM5 11.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 010-1zM5 17a.5.5 0 000 1h7v1a.5.5 0 001 0v-1h6a.5.5 0 000-1h-6v-1a.5.5 0 00-1 0v1H5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        />
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
      style="width: calc(100vw - 270px); overflow: hidden; min-height: calc(100vh - 205px);"
    >
      <div
        class="StyledProps--font StyledProps--main PageBody--pageBody"
        data-name="page-body"
      >
        <div
          class="delegateProfilesContainer"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateProfileElements Card--interactive"
            tabindex="0"
          >
            <div
              style="width: 250px; height: 200px; border-radius: 5px; display: flex; flex-direction: column;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <h2
                  class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-bottom-medium"
                  level="2"
                  style="font-size: 16px; font-weight: 500; color: rgb(34, 34, 42);"
                >
                  Primary
                </h2>
                <span
                  style="flex-grow: 1;"
                />
                <div
                  class="StyledProps--font StyledProps--main"
                  style="transform: translate(12px, -10px);"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                        style="transform: rotate(90deg);"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-more StyledProps--main"
                          icon="more"
                        >
                          <svg
                            data-icon="more"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              more
                            </desc>
                            <path
                              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  The primary profile for the account
                </p>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex"
                style="border-top: 1px solid #D9DAE6;"
              >
                <span
                  style="flex-grow: 1;"
                />
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: space-between;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small"
                  style="font-size: 8px; color: rgb(107, 109, 133); letter-spacing: 0.285714px; font-weight: 500;"
                >
                  <div>
                    delegates.usedBy
                  </div>
                  <div>
                     
                    delegate.delegates
                  </div>
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small"
                  style="font-size: 8px; color: rgb(107, 109, 133); letter-spacing: 0.285714px; font-weight: 500;"
                >
                  <div>
                    delegates.lastUpdated
                  </div>
                  <div>
                    0
                     
                    minutes
                     ago
                  </div>
                </p>
              </div>
            </div>
          </div>
          <div
            class="bp3-card bp3-interactive bp3-elevation-2 Card--card delegateProfileElements Card--interactive"
            tabindex="0"
          >
            <div
              style="width: 250px; height: 200px; border-radius: 5px; display: flex; flex-direction: column;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <h2
                  class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-bottom-medium"
                  level="2"
                  style="font-size: 16px; font-weight: 500; color: rgb(34, 34, 42);"
                >
                  profile 2
                </h2>
                <span
                  style="flex-grow: 1;"
                />
                <div
                  class="StyledProps--font StyledProps--main"
                  style="transform: translate(12px, -10px);"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                        style="transform: rotate(90deg);"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-more StyledProps--main"
                          icon="more"
                        >
                          <svg
                            data-icon="more"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              more
                            </desc>
                            <path
                              d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  The profile for the account
                </p>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex"
                style="border-top: 1px solid #D9DAE6;"
              >
                <span
                  style="flex-grow: 1;"
                />
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: space-between;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small"
                  style="font-size: 8px; color: rgb(107, 109, 133); letter-spacing: 0.285714px; font-weight: 500;"
                >
                  <div>
                    delegates.usedBy
                  </div>
                  <div>
                     
                    delegate.delegates
                  </div>
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small"
                  style="font-size: 8px; color: rgb(107, 109, 133); letter-spacing: 0.285714px; font-weight: 500;"
                >
                  <div>
                    delegates.lastUpdated
                  </div>
                  <div>
                    0
                     
                    minutes
                     ago
                  </div>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
